WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200105
[iOS WK2] A top fixed bar can flicker when scrolling with the keyboard up
https://bugs.webkit.org/show_bug.cgi?id=200105
Summary
[iOS WK2] A top fixed bar can flicker when scrolling with the keyboard up
Simon Fraser (smfr)
Reported
2019-07-24 19:26:47 PDT
[iOS WK2] A top fixed bar can flicker when scrolling with the keyboard up
Attachments
Patch
(20.78 KB, patch)
2019-07-24 19:36 PDT
,
Simon Fraser (smfr)
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-07-24 19:36:06 PDT
Created
attachment 374849
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-07-24 19:36:08 PDT
<
rdar://problem/52871975
>
Wenson Hsieh
Comment 3
2019-07-24 19:55:56 PDT
Comment on
attachment 374849
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374849&action=review
> LayoutTests/scrollingcoordinator/ios/fixed-scrolling-with-keyboard.html:32 > + function getScrollingTreeUIScript() > + { > + return `(function() { > + return uiController.scrollingTreeAsText; > + })();`; > + }
Nit - maybe we should wrap this in a UIHelper method as well?
Simon Fraser (smfr)
Comment 4
2019-07-25 14:14:56 PDT
https://trac.webkit.org/r247839
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug